--- a/.cicd/buildspec.yml
+++ b/.cicd/buildspec.yml
@@ -7,5 +7,8 @@ phases:
   build:
     commands:
       - pip3 install mysql-connector-python -t .
-      - zip bundle.zip *
+      - |
+        chmod 644 $(find . -type f)
+        chmod 755 $(find . -type d)
+      - zip -r bundle.zip *
       - aws lambda update-function-code --function-name macdas --zip-file fileb://bundle.zip
